# cameo-mcp-bridge

./: .gitignore  CHANGELOG.md  README.md  install.sh
.agents/plugins/: marketplace.json
docs/ideation/: 2026-03-30-dod-advanced-capabilities-roadmap.md
docs/plans/: 2026-04-12-semantic-mbse-major-release.md  2026-04-20-physical-architecture-competency-plan.md  cameo-bridge-stabilization-plan.md
docs/releases/: 2026-04-12-semantic-mbse-major-release.md  2026-04-13-mcp-contract-hardening-minor-release.md  2026-04-13-zero-touch-automation-minor-release.md  2026-04-20-native-matrix-and-codex-plugin-patch-release.md
docs/strategy/: 2026-03-30-moonshot-strategy.md
mcp-server/: pyproject.toml
mcp-server/cameo_mcp/: client.py  rubric_workflows.py  semantic_validation.py  server.py  state_machine_semantics.py  verification.py
mcp-server/cameo_mcp/methodology/: __init__.py  registry.py  runtime.py  service.py
mcp-server/scripts/: live_validate_flow_properties.py  live_validate_matrices.py
mcp-server/tests/: test_client.py  test_methodology_registry.py  test_methodology_runtime.py  test_methodology_service.py  test_rubric_workflows.py  test_semantic_validation.py  test_server.py  test_state_machine_semantics.py  test_verification.py
plugin/: build.gradle  plugin.xml  settings.gradle
plugin/src/com/claude/cameo/bridge/: HttpBridgeServer.java  (+1 more)
plugins/cameo-mcp-bridge/: .mcp.json
plugins/cameo-mcp-bridge/.codex-plugin/: plugin.json
plugins/cameo-mcp-bridge/scripts/: run-cameo-mcp-server.ps1
plugins/cameo-mcp-bridge/skills/cameo-live-validation/: SKILL.md
(+17 files in other folders)
